# llm-training

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  RESUME.md  cicd.md  cspell.json  deep_dive.md  next_run.md  pyproject.toml  training_analysis.md
.github/workflows/: ci.yml  docker.yml  model-tests.yml  security.yml  training-check.yml
docs/: TRAINING.md
scripts/: _auth.py  evaluate.py  generate_diagrams.py  pretokenize.py  run_training.py  train_tokenizer.py
src/: checkpoint.py  config.py  dataloader.py  dataset.py  kv_cache.py  logger.py  model.py  muon.py  optimizer.py  plots.py  scheduler.py  tokenizer.py  train.py
tests/: conftest.py  test_checkpoint.py  test_config.py  test_dataloader.py  test_dataset.py  test_evaluate.py  test_kv_cache.py  test_logger.py  test_model.py  test_muon.py  test_optimizer.py  test_plots.py  test_scheduler.py  test_tokenizer.py  test_train.py  test_training_regression.py
