[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-training"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "tokenizers>=0.21.0",
    "datasets>=3.3.0",
    "torch>=2.6.0,<2.7.0",
    "numpy>=2.2.0",
    "matplotlib>=3.10.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
filterwarnings = [
    # In scheduler unit tests we call scheduler.step() without optimizer.step()
    # intentionally (we only want to read the LR, not run training steps).
    "ignore:Detected call of `lr_scheduler.step\\(\\)` before `optimizer.step\\(\\)`",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
