[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-training"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "tokenizers>=0.21.0",
    "datasets>=3.3.0",
    "torch>=2.6.0,<2.7.0",
    "triton>=3.0.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "setuptools; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "numpy>=2.2.0",
    "matplotlib>=3.10.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "smoke: fast model correctness checks (forward pass, loss, checkpoint)",
    "slow: heavier tests excluded from the default suite (training regression)",
    "unit: isolated unit tests",
    "integration: tests that cross module boundaries",
]
filterwarnings = [
    # In scheduler unit tests we call scheduler.step() without optimizer.step()
    # intentionally (we only want to read the LR, not run training steps).
    "ignore:Detected call of `lr_scheduler.step\\(\\)` before `optimizer.step\\(\\)`",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.9.0",
    "black>=24.0.0",
    "mypy>=1.11.0",
    "pip-audit>=2.7.0",
    "bandit[toml]>=1.7.0",
]

[tool.black]
target-version = ["py311"]
